[gd_scene load_steps=12 format=2]

[ext_resource path="res://AimlessNode.gd" type="Script" id=1]
[ext_resource path="res://AimlessCube.tscn" type="PackedScene" id=2]
[ext_resource path="res://fi_dev_avatar_clear.png" type="Texture" id=3]
[ext_resource path="res://Unique.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://song.ogg" type="AudioStream" id=5]

[sub_resource type="ProceduralSky" id=1]
radiance_size = 4
sky_top_color = Color( 0.0470588, 0.454902, 0.976471, 1 )
sky_horizon_color = Color( 0.556863, 0.823529, 0.909804, 1 )
sky_curve = 0.25
ground_bottom_color = Color( 0.10704, 0.240704, 0.449219, 1 )
ground_horizon_color = Color( 0.482353, 0.788235, 0.952941, 1 )
ground_curve = 0.01
sun_energy = 16.0

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 2.0
ambient_light_sky_contribution = 0.5
fog_height_min = 0.0
fog_height_max = 100.0
ssao_quality = 0

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 28, 1, 24 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 4 )

[node name="AimlessGame" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7.20967 )

[node name="AimlessCube" parent="." instance=ExtResource( 2 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Watermark" type="TextureRect" parent="."]
margin_left = 27.0
margin_top = 32.0
margin_right = 80.0
margin_bottom = 85.0
texture = ExtResource( 3 )
expand = true

[node name="SpeedLabel" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 26.0
margin_top = -33.0
margin_right = 66.0
margin_bottom = -19.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Speed"

[node name="SpeedProgress" type="ProgressBar" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 214.0
margin_top = -30.0
margin_right = -16.0
margin_bottom = -14.0
step = 1.0
percent_visible = false

[node name="MissArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.0525 )
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="MissArea"]
transform = Transform( 1, 0, 0, 0, -0.0146244, -0.999893, 0, 0.999893, -0.0146244, 0, 0, 0 )
shape = SubResource( 4 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true

[node name="ClicksLabel" type="Label" parent="."]
margin_left = 26.0
margin_top = 540.0
margin_right = 67.0
margin_bottom = 559.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.03125, 1, 0.0463867, 1 )
text = "Clicks"

[node name="LoseMenu" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="LoseLabel" type="Label" parent="LoseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -56.0
margin_right = 106.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Game Over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TryAgainButton" type="Button" parent="LoseMenu"]
margin_left = -71.0
margin_top = 53.0
margin_right = -1.0
margin_bottom = 73.0
text = "Try Again"

[node name="QuitButton" type="Button" parent="LoseMenu"]
margin_left = 38.0
margin_top = 53.0
margin_right = 108.0
margin_bottom = 73.0
text = "Quit"
[connection signal="input_event" from="MissArea" to="." method="_on_MissArea_input_event"]
[connection signal="pressed" from="LoseMenu/TryAgainButton" to="." method="_on_TryAgainButton_pressed"]
[connection signal="pressed" from="LoseMenu/QuitButton" to="." method="_on_QuitButton_pressed"]
